--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🤖 Nandakumar Rangasamy</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <img src="https://media-exp1.licdn.com/dms/image/C4D03AQFnA-QNuF008A/profile-displayphoto-shrink_400_400/0/1517056811511?e=1668643200&v=beta&t=R2G8Z1mG7JCA8Z6UaHWo0h24ALcSNy_2icKVzyQffXg" alt="" width="200" height="200">
