--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🤖 Nandakumar Rangasamy</title>
     <link rel="stylesheet" href="style.css">
+    <script src="./index.js"></script>
 </head>
-<body>
-    <img src="https://media-exp1.licdn.com/dms/image/C4D03AQFnA-QNuF008A/profile-displayphoto-shrink_400_400/0/1517056811511?e=1668643200&v=beta&t=R2G8Z1mG7JCA8Z6UaHWo0h24ALcSNy_2icKVzyQffXg" alt="" width="200" height="200">
+<body id="root">
+    <img src="https://media-exp1.licdn.com/dms/image/C4D03AQFnA-QNuF008A/profile-displayphoto-shrink_400_400/0/1517056811511?e=1668643200&v=beta&t=R2G8Z1mG7JCA8Z6UaHWo0h24ALcSNy_2icKVzyQffXg" alt="" width="200" height="200" id="image_1">
     <br>
     <strong>Nandakumar Rangsamy</strong>
     <p>I am <em>Principal Member Of Technical Staff</em> at Oracle India Pvt. Ltd</p>
